--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,47 @@
-/target
-/classes
-/checkouts
+# vim
+*.swp
+*.swo
+
+# IntelliJ
+.idea/
+*.ipr
+*.iml
+*.iws
+
+# Build
+vendor/
+build/
+dist/
+target/
+classes/
+checkouts/
+run/
+.bundle
+.rakeTasks
+.direnv
+
+# OS
+.DS_Store
+
+# Clojure
 profiles.clj
+.eastwood
 pom.xml
 pom.xml.asc
 *.jar
 *.class
-/.lein-*
-/.nrepl-port
-/.prepl-port
-.hgignore
-.hg/
-/.idea
-*.iml
-.eastwood
+.lein-*/
+lsp/
+.nrepl-port
+
+# Temporary
+run/pids/
+run/logs/
+*.log
+.tmp
+
+# Terraform
+.terraform
+*.tfstate
+*.tfstate.backup
+.nrepl-port
